--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
 			<td><%= user.email %></td>
 			<td>
 				<%= link_to 'Edit', edit_user_path(user) %> |
-				<%= link_to 'Delete', user_path(user), method: :delete, confirm: 'Are you sure you want to delete this user? %>' %>
+				<%= link_to 'Delete', user_path(user), method: :delete, confirm: 'Are you sure you want to delete this user?' %>
 			</td>
 		</tr>
 		<% end %>
